# esc-control-hub

./: .clang-format  .gitignore  .mxproject  CMakeLists.txt  README.md  STM32H563xx_FLASH.ld  STM32H563xx_RAM.ld  esc-control-hub.ioc
Code/: esc-control-hub.ioc
Core/Inc/: main.h  stm32h5xx_hal_conf.h  stm32h5xx_it.h
Core/Src/: fdcan.c  gpio.c  icache.c  main.c  rtc.c  stm32h5xx_hal_msp.c  stm32h5xx_it.c  tim.c  usb.c
PCB/ESC_Device_Hub_v0/: ESC_Device_Hub_v0.kicad_pcb  ESC_Device_Hub_v0.kicad_prl  ESC_Device_Hub_v0.kicad_pro  ESC_Device_Hub_v0.kicad_sch
PCB/ESC_Device_Hub_v1/: ESC_Device_Hub_v1.kicad_pcb  ESC_Device_Hub_v1.kicad_prl  ESC_Device_Hub_v1.kicad_pro  ESC_Device_Hub_v1.kicad_sch  ~ESC_Device_Hub_v1.kicad_pro.lck
PCB/ESC_Device_Hub_v1/production/: bom.csv  designators.csv  netlist.ipc  positions.csv
app/: HEADER_INCLUDE.cpp
app/Driver/FDCAN/: mFDCAN.cpp  mFDCAN.hpp  (+1 more)
app/main_FW/: App.cpp  App.hpp  CMakeLists.txt  main_FW.cpp  main_FW.hpp
cmake/stm32cubemx/: CMakeLists.txt
docs/: requirements-definition.md
esc_hub/: CMakeLists.txt  app.cpp
esc_hub/Driver/FDCAN/: L_FDCAN.cpp  L_FDCAN.hpp
esc_hub/Driver/FLASH/: Flash.cpp  Flash.hpp  Flash_data_template.hpp
esc_hub/Driver/USB/: CMakeLists.txt  USB_FS.cpp
esc_hub/include/esc_hub/: app.hpp  fdcan_LL_config.hpp  fdcan_LL_driver.hpp  fdcan_config.hpp  fdcan_driver.hpp  fdcan_hal_config.hpp  fdcan_hal_driver.hpp  flash.hpp  flash_data_config.hpp  flash_register.hpp  usb_fs.hpp
esc_hub/src/: app.cpp  fdcan_LL_driver.cpp  fdcan_driver.cpp  fdcan_hal_driver.cpp  flash.cpp  usb_fs.cpp
(+9 files in other folders)
